@@ -193,29 +193,15 @@ end_import
 
 begin_import
 import|import
-name|com
+name|org
 operator|.
-name|jgoodies
+name|apache
 operator|.
-name|forms
+name|cayenne
 operator|.
-name|builder
+name|map
 operator|.
-name|DefaultFormBuilder
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|jgoodies
-operator|.
-name|forms
-operator|.
-name|layout
-operator|.
-name|FormLayout
+name|DataMap
 import|;
 end_import
 
@@ -227,9 +213,9 @@ name|apache
 operator|.
 name|cayenne
 operator|.
-name|map
+name|modeler
 operator|.
-name|DataMap
+name|Application
 import|;
 end_import
 
@@ -271,10 +257,6 @@ decl_stmt|;
 specifier|private
 name|String
 name|title
-decl_stmt|;
-specifier|private
-name|DefaultFormBuilder
-name|builder
 decl_stmt|;
 specifier|private
 name|ConcurrentMap
@@ -364,7 +346,7 @@ name|VERTICAL_SCROLLBAR_ALWAYS
 argument_list|,
 name|JScrollPane
 operator|.
-name|HORIZONTAL_SCROLLBAR_NEVER
+name|HORIZONTAL_SCROLLBAR_AS_NEEDED
 argument_list|)
 expr_stmt|;
 name|this
@@ -402,7 +384,7 @@ name|this
 operator|.
 name|setResizable
 argument_list|(
-literal|false
+literal|true
 argument_list|)
 expr_stmt|;
 name|this
@@ -414,13 +396,6 @@ argument_list|)
 expr_stmt|;
 name|this
 operator|.
-name|setLocationRelativeTo
-argument_list|(
-literal|null
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
 name|setModal
 argument_list|(
 literal|false
@@ -428,13 +403,6 @@ argument_list|)
 expr_stmt|;
 name|this
 operator|.
-name|setAlwaysOnTop
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
 name|setPreferredSize
 argument_list|(
 operator|new
@@ -443,21 +411,6 @@ argument_list|(
 literal|400
 argument_list|,
 literal|400
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|scrollPane
-operator|.
-name|setPreferredSize
-argument_list|(
-operator|new
-name|Dimension
-argument_list|(
-literal|400
-argument_list|,
-literal|330
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -465,6 +418,19 @@ name|this
 operator|.
 name|pack
 argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|setLocationRelativeTo
+argument_list|(
+name|Application
+operator|.
+name|getFrame
+argument_list|()
+operator|.
+name|getView
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 specifier|private
@@ -494,38 +460,6 @@ name|void
 name|buildElements
 parameter_list|()
 block|{
-name|getRootPane
-argument_list|()
-operator|.
-name|setDefaultButton
-argument_list|(
-name|okButton
-argument_list|)
-expr_stmt|;
-name|FormLayout
-name|layout
-init|=
-operator|new
-name|FormLayout
-argument_list|(
-literal|"fill:200dlu"
-argument_list|)
-decl_stmt|;
-name|builder
-operator|=
-operator|new
-name|DefaultFormBuilder
-argument_list|(
-name|layout
-argument_list|)
-expr_stmt|;
-name|builder
-operator|.
-name|append
-argument_list|(
-name|scrollPane
-argument_list|)
-expr_stmt|;
 name|buttonPanel
 operator|.
 name|add
@@ -540,21 +474,52 @@ argument_list|(
 name|okButton
 argument_list|)
 expr_stmt|;
-name|builder
+name|JPanel
+name|mainPanel
+init|=
+operator|new
+name|JPanel
+argument_list|(
+operator|new
+name|BorderLayout
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|mainPanel
 operator|.
-name|append
+name|add
+argument_list|(
+name|scrollPane
+argument_list|,
+name|BorderLayout
+operator|.
+name|CENTER
+argument_list|)
+expr_stmt|;
+name|mainPanel
+operator|.
+name|add
 argument_list|(
 name|buttonPanel
+argument_list|,
+name|BorderLayout
+operator|.
+name|SOUTH
 argument_list|)
 expr_stmt|;
 name|this
 operator|.
 name|add
 argument_list|(
-name|builder
-operator|.
-name|getPanel
+name|mainPanel
+argument_list|)
+expr_stmt|;
+name|getRootPane
 argument_list|()
+operator|.
+name|setDefaultButton
+argument_list|(
+name|okButton
 argument_list|)
 expr_stmt|;
 block|}
